# controllers/validation.js
@@ -4,6 +4,7 @@ const { user: userSchema, userUpdate: userUpdateSchema } = require('../schemas/u
 const { address: addressSchema, addressUpdate: addressUpdateSchema } = require('../schemas/address.json').definitions;
 const { product: productSchema, productUpdate: productUpdateSchema } = require('../schemas/product.json').definitions;
 const { category: categorySchema, categoryUpdate: categoryUpdateSchema } = require('../schemas/category.json').definitions;
+const { order: orderSchema, orderUpdate: orderUpdateSchema } = require('../schemas/order.json').definitions;
 
 const v = new Validator();
 
@@ -207,6 +208,60 @@ exports.validateCategoryUpdate = async (ctx, next) => {
 
     try {
         v.validate(body, categoryUpdateSchema, validationOptions);
+        await next();
+    } catch (error) {
+        if (error instanceof ValidationError) {
+            // Extract error details
+            const errorMessage = {
+                message: 'Validation Error',
+                details: error.message
+            };
+            ctx.body = errorMessage;
+            ctx.status = 400;
+        } else {
+            throw error;
+        }
+    }
+}
+
+// create order validation
+exports.validateOrder = async (ctx, next) => {
+    const validationOptions = {
+        throwError: true,
+        allowUnknownAttributes: false
+    };
+
+    const body = ctx.request.body;
+
+    try {
+        v.validate(body, orderSchema, validationOptions);
+        await next();
+    } catch (error) {
+        if (error instanceof ValidationError) {
+            // Extract error details
+            const errorMessage = {
+                message: 'Validation Error',
+                details: error.message
+            };
+            ctx.body = errorMessage;
+            ctx.status = 400;
+        } else {
+            throw error;
+        }
+    }
+}
+
+// update order validation
+exports.validateOrderUpdate = async (ctx, next) => {
+    const validationOptions = {
+        throwError: true,
+        allowUnknownAttributes: false
+    };
+
+    const body = ctx.request.body;
+
+    try {
+        v.validate(body, orderUpdateSchema, validationOptions);
         await next();
     } catch (error) {
         if (error instanceof ValidationError) {
